# orp_joybot_eng

./: README.md  list_eng
eng/img/: joybot_vid_imgEng.xcf
orp_joybot.eng/: CMakeLists.txt
orp_joybot.eng/kdenlive/: orpjoybot_video_eng.kdenlive  orpjoybot_video_eng_backup0.kdenlive
orp_joybot.eng/src/: dctest1.cpp  main.cpp
parts/: Radek_Janecka-172-RaspberryPi_holder.stl  Tenda-59-9V.3mf  dt22-79-d22powerbankholdeWidthV1-powerbankholder.stl  nikodembartnik-45-12mm_caster_wheel.3mf  rupantar2002-145-BasePlateWheel.stl
